<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LOUDroid</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="hint">email@server.com</string>
    <string name="save_pw">Save Password</string>
    <string name="world_offline">World offline</string>
    <string name="city_view">Open City View</string>
    <string name="logout">Log out</string>
    <string name="send">Send</string>
    <string name="current_city">Current city:</string>
    <string name="open_chat">Open Chat</string>
    <string name="total_chat">Total chat messages:</string>
    <string name="gold">Gold</string>
    <string name="low_ram">Sorry, but your device does not have enough RAM for the city view</string>
    <string name="ok">OK</string>
    <string name="alliance">[Alliance] </string>
    <string name="type">Type</string>
    <string name="defender">Defender</string>
    <string name="target">Target</string>
    <string name="attacker">Attacker</string>
    <string name="attack_alliance">Alliance</string>
    <string name="source">Source</string>
    <string name="ts_attacker">TS Attacker</string>
    <string name="reports">Reports (%d)</string>
    <string name="trapped">trapped</string>
    <string name="fortified">fortified</string>
    <string name="export">export</string>
    <string name="nextwave">Next Wave</string>
    <string name="ts_defender">TS Defender</string>
    <string name="offline">this server is currently offline:</string>
    <string name="monitor_alliance_att">Monitor Alliance Attacks</string>
    <string name="queuesize">Queue size: %1$d ETC: %2$s</string>
    <string name="you_where_disconnected">You where disconnected from the server!</string>
    <string name="homescreen">Go to homescreen</string>
    <string name="announcements">Announcements</string>
    <string name="general">General</string>
    <string name="introduction">Introduction</string>
    <string name="offtopic">Offtopic</string>
    <string name="new_thread">Create new thread</string>
    <string name="reply">Reply</string>
    <string-array name="themes">
        <item >Holo</item>
        <item >Holo Light</item>
        <item >Lord of Ultima</item>
    </string-array>
    <string-array name="theme_names">
        <item >holo</item>
        <item >holo_light</item>
        <item >lou</item>
    </string-array>
        <string name="theme">Theme</string>
        <string name="max_transport">Max transport capacity</string>
        <string name="avail_carts">Available Carts:</string>
        <string name="filter_continent">Filter By Continent</string>
        <string name="switchto">Switch To City</string>
        <string name="network_offline">Network Offline</string>
        <string-array name="filters">
            <item >Dungeons</item>
            <item >Lawless</item>
            <item >Cities&amp;Castles</item>
            <item >Bosses</item>
        </string-array>
    <string name="no_warnings">No Food Warnings</string>
    <string name="allow_abandon">Allow substiture to abandon your cities</string>
    <string name="allow_funds">Allow substitute to spend your Funds</string>
    <string name="send_request">Send request</string>
    <string name="player_name">Player name:</string>
    <string name="req_sub">Requesting Substitute:</string>
    <string name="cancel">Cancel</string>
    <string name="app_version">App Version:</string>
    <string name="repeat_x_times">Repeat %d times</string>
    <string name="filters">Filters</string>
    <string name="read">Read</string>
    <string name="unread">Unread</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="skirmish">Skirmish</string>
    <string name="plunder">Plunder</string>
    <string name="assault">Assault</string>
    <string name="seige">Seige</string>
    <string name="support">Support</string>
    <string name="scout">Scout</string>
    <string name="trade">Trade</string>
    <string name="raid_boss">Raid boss</string>
    <string name="raid_dungeon">Raid Dungeon</string>
    <string name="other_reports">Other Reports</string>
    <string name="select_all_filters">Select all filters</string>
    <string name="incoming_attack_sound">Incoming Attack Sound</string>
    <string name="ordered">Ordered:</string>
    <string name="lost">Lost:</string>
    <string name="survived">Survived:</string>
</resources>
